--- a/pom.xml
+++ b/pom.xml
@@ -48,11 +48,11 @@
 <!--            <artifactId>source</artifactId>-->
 <!--            <version>3.3.1</version>-->
 <!--        </dependency>-->
-        <dependency>
-            <groupId>org.ow2.asm</groupId>
-            <artifactId>asm</artifactId>
-            <version>7.3.1</version>
-        </dependency>
+<!--        <dependency>-->
+<!--            <groupId>org.ow2.asm</groupId>-->
+<!--            <artifactId>asm</artifactId>-->
+<!--            <version>7.3.1</version>-->
+<!--        </dependency>-->
         <!-- Spring AOP -->
         <dependency>
             <groupId>org.springframework</groupId>
