--- a/NettyStudy/build.gradle
+++ b/NettyStudy/build.gradle
@@ -10,6 +10,7 @@ repositories {
 }
 
 dependencies {
+    testImplementation group: 'junit', name: 'junit', version: '4.13.1'
     implementation group: 'io.netty', name: 'netty-all', version: '4.1.110.Final'
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
