--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,11 @@
             <version>RELEASE</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>io.netty</groupId>
+            <artifactId>netty-all</artifactId>
+            <version>4.1.111.Final</version>
+        </dependency>
     </dependencies>
 
 </project>
